refactor(ai): redesign intent handling and context management- Overhaul CorrectionHandler to use new subject for last failed query- Enhance FollowUpHandler with pronoun resolution and improved context handling- Add HowToQueryHandler for step-by-step web search results- Introduce InternetStatusHandler for network connection checks- Update GreetingHandler, GoodbyeHandler, and DefaultHandler to use ResponseGenerator- Implement GenerativeService for AI-powered text generation- Add fallback responses in resources/responses/fallbacks.txt